segunda parte feita faltando apenas últimos detalhes

--- a/index.html
+++ b/index.html
@@ -7,19 +7,33 @@
     <title>Galaxy Login Page | Unker</title>
 </head>
 <body>
-    
-    <div class="container">
-        <Header>
-            <img class="logo" src="assets/img/Logo.svg" alt="">
-        </Header>
+    <div class="main-container">
 
-        <h1>sing in to your <br> <span>adventure!</span></h1>
-    </div>
+        <div class="container-logo">
+            <Header>
+                <img class="logo" src="assets/img/Logo.svg" alt="">
+            </Header>
 
-    <div class="Form">
+            <h1>sing in to your <br> <span>adventure!</span></h1>
+        </div>
 
-    </div>
+        <div class="container-form">
+            <h2>sign in</h2>
+            <h4>Sign in with email address</h4>
+            <form>
+                <input type="email" name="" id="email" placeholder="Yourname@gmail.com">
+                <button class="sign-in">Sign up</button>
+            </form>
+            <span class="linha"></span>
+            <span class="Or">Or continue with</span>
+            <div class="buttons">
+                <button><img src="assets/img/Google Logo.svg" alt="">Google</button>
+                <button><img src="assets/img/Facebook Logo.svg" alt="">Facebook</button>
+            </div>
+            <span class="by">By registreting you with our <span class="colorido">Terms and Conditions</span></span>
+        </div>
 
+    </div> 
 
 
 
