detalhes finalizados faltando apenas responsividade na página

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container-form">
             <h2>sign in</h2>
             <h4>Sign in with email address</h4>
-            <form>
+            <form id="form">
                 <input type="email" name="" id="email" placeholder="Yourname@gmail.com">
                 <button class="sign-in">Sign up</button>
             </form>
@@ -30,7 +30,7 @@
                 <button><img src="assets/img/Google Logo.svg" alt="">Google</button>
                 <button><img src="assets/img/Facebook Logo.svg" alt="">Facebook</button>
             </div>
-            <span class="by">By registreting you with our <span class="colorido">Terms and Conditions</span></span>
+            <span class="by">By registreting you with our <a href="#">Terms and Conditions</a></span>
         </div>
 
     </div> 
